[package]
name = "si5351a-adafruit"
version = "0.1.0"
edition = "2024"
authors = ["Chen Zhengyang<fmaj7@foxmail.com>"]
description = "A driver for the Adafruit Si5351A clock generator module using I2C."
license = "MIT"
repository = "https://github.com/ZhengyangChen/si5351a_adafruit"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["si5351a", "adafruit", "clock", "i2c", "embedded-hal"]

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
rppal = { version = "0.22.1", features = ["embedded-hal"] }

[[example]]
name = "rppal"
path = "examples/rppal.rs"